--- a/laundry/templates/base.html
+++ b/laundry/templates/base.html
@@ -158,17 +158,18 @@
                                     <a class="nav-link" href="{% url 'add_laundry_item' %}">Manage Items</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'update_profile' %}">Profile</a>
-                                </li>
-                                <li class="nav-item">
                                     <a class="nav-link" href="{% url 'logout' %}">Logout</a>
                                 </li>
                             {% endif %}
                         {% else %}
                             {% if request.resolver_match.url_name != 'login' and request.resolver_match.url_name != 'register' %}
+                            <li class="nav-item">
+                                <a class="nav-link" >ID: {{ user.id }}</a>
+                            </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="{% url 'request_laundry' %}">Request Laundry</a>
                                 </li>
+                               
                                 <li class="nav-item">
                                     <a class="nav-link" href="{% url 'dashboard' %}">Dashboard</a>
                                 </li>
